# aitrios-sample-application-keypoint-detection

./: README.md  docker-compose.yml
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh
backend/: .flaskenv  .gitignore  Dockerfile  pyproject.toml
backend/lib/console-access-api/: pyproject.toml
backend/lib/console-access-api/console_access_api/: aitrios_console.py  utils.py
backend/src/: app.py
backend/src/pipeline/: pipeline.py
backend/src/pipeline/data_loader/: console_data_loader.py  data_loader_base_class.py  data_loader_thread.py
backend/src/pipeline/deserializer/: deserialize_keypoint.py  deserializer_thread.py
backend/src/pipeline/deserializer/SmartCamera/: GeneralPose.py  KeyPoint.py  KeyPointName.py  MultiPoseData.py  MultiPoseTop.py  Point.py  Point2d.py
frontend/: .eslintrc.json  Dockerfile  jest.config.json  package-lock.json  package.json  tsconfig.test.json
frontend/src/components/layouts/: Footer.tsx  Header.tsx
frontend/src/config/: backendConfig.ts
frontend/src/features/devices/: index.tsx
frontend/src/features/display/: index.tsx
frontend/src/features/inferences/: index.tsx
frontend/src/features/parameters/: index.tsx
frontend/src/features/reset/: index.tsx
frontend/src/hooks/: useAlert.tsx  useSpinner.tsx
frontend/src/pages/: _app.tsx  index.tsx
frontend/src/stores/: deviceIdContext.tsx
frontend/src/styles/: baseStyle.tsx
tutorial/: .gitignore  requirements.txt
tutorial/import_model_to_console/: README.md  configuration_schema.json  import_model_to_console.ipynb
(+16 files in other folders)
