[tool.poetry]
name = "console-access-api"
version = "0.1.0"
description = ""
authors = ["Sony Semiconductor Solutions Corporation"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
